--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  material_color_utilities:   # 정의된 색상의 특정 tone 값인 색 얻기 위해
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
