--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
+  get: ^4.6.6
+
   material_color_utilities:   # 정의된 색상의 특정 tone 값인 색 얻기 위해
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
@@ -40,6 +42,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.9
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
