--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,21 @@ dependencies:
 
   get: ^4.6.6
 
-  material_color_utilities:   # 정의된 색상의 특정 tone 값인 색 얻기 위해
+  material_color_utilities:   # 정의된 색상의 특정 tone 값인 색 얻을 수 있음
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   photo_view: ^0.14.0
+
+  # google login
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
