Feat: Add MissingInfo, Photo Model 타입, 변수명 등 추후 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
   google_maps_flutter: ^2.5.3
+  build_runner: ^2.4.8
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
 
 dev_dependencies:
   flutter_test:
