--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,14 +46,14 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-  <string>Used to demonstrate image picker plugin</string>
-  <key>NSMicrophoneUsageDescription</key>
-  <string>Used to capture audio for image picker plugin</string>
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>Used to demonstrate image picker plugin</string>
-	<string>NSLocationWhenInUseUsageDescription</string>
-	<key>Want to display location on map, and track it.</key>
-	<string>NSLocationAlwaysAndWhenInUseUsageDescription</string>
-	<key>Want to display location on map, and track it.</key>
+    <string>Used to demonstrate image picker plugin</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Used to capture audio for image picker plugin</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Used to demonstrate image picker plugin</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Want to display location on map, and track it.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Want to display location on map, and track it.</string>
 </dict>
 </plist>
