--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,8 @@ dependencies:
   geolocator: ^10.1.0
   dio: ^5.4.0
   flutter_dotenv: ^5.1.0
-  get:
-  
+  get: ^4.6.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
