--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,9 @@ dependencies:
   photo_view: ^0.14.0
 
   # google login
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-
   google_sign_in: ^6.2.1
+  flutter_secure_storage: ^9.0.0
+  localstorage: ^4.0.1+4
 
   geolocator: ^10.1.0
   dio: ^5.4.0
