--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <application
+    android:enableOnBackInvokedCallback="true"
         android:requestLegacyExternalStorage="true"
         android:label="iris_flutter"
         android:name="${applicationName}"
