--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   location: ^5.0.3
 
   intl: ^0.19.0
+  firebase_messaging: ^14.7.19
+  flutter_local_notifications: ^17.1.0
+  firebase_core: ^2.27.0
+  firebase_analytics: ^10.8.9
 
 dev_dependencies:
   flutter_test:
