--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ ios/Runner/Info.plist
 # 숨김 설정 파일
 hidden_config.dart
 /config/hidden_config.dart
+lib/firebase_options.dart
+firebase.json
+ios/firebase_app_id_file.json
